# smtp_mailer

./: .env.example  .gitignore  LICENSE  setup.cfg
examples/: celery_mail.py  mail.py  main.py
src/smtp_mailer/: __init__.py  basic.py  mail.py
src/smtp_mailer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_celery_mail.py  test_mail.py  utils.py
tests/sample_remplate/: mail.html
