[metadata]
name = smtp_mailer
version = 0.1
author = Naveen Ravi Chandran
author_email = naveen.cravi@gmail.com
description = Makes simple way to send mail to the with 3 lines of code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/naveen-ravi2810/smtp_mailer
project_urls =
    Bug Tracker = https://github.com/naveen-ravi2810/smtp_mailer/issues
classifiers =
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Framework :: Celery
        Topic :: Software Development :: Libraries
        Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src